[gd_scene load_steps=3 format=3 uid="uid://t0cu2cumqjme"]

[ext_resource type="Script" path="res://Objects/CollectionRow/collection_row.gd" id="1_iski5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_od70j"]
size = Vector2(18, 40)

[node name="CollectionRow" type="HBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -20.0
offset_right = 84.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 128
alignment = 1
script = ExtResource("1_iski5")

[node name="LeftDetector" type="ColorRect" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="LeftArea2D" type="Area2D" parent="LeftDetector"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftDetector/LeftArea2D"]
position = Vector2(9, 20)
shape = SubResource("RectangleShape2D_od70j")

[node name="RightDetector" type="ColorRect" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="RightArea2D" type="Area2D" parent="RightDetector"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightDetector/RightArea2D"]
position = Vector2(9, 20)
shape = SubResource("RectangleShape2D_od70j")

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="area_entered" from="LeftDetector/LeftArea2D" to="." method="_on_left_area_2d_area_entered"]
[connection signal="area_exited" from="LeftDetector/LeftArea2D" to="." method="_on_left_area_2d_area_exited"]
[connection signal="area_entered" from="RightDetector/RightArea2D" to="." method="_on_right_area_2d_area_entered"]
[connection signal="area_exited" from="RightDetector/RightArea2D" to="." method="_on_right_area_2d_area_exited"]
